[gd_scene load_steps=3 format=3 uid="uid://cos7oyhfflf0x"]

[ext_resource type="Script" path="res://scenes/card/card.gd" id="1_jpp8f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xmoxq"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[node name="CardBackground" type="Panel"]
offset_right = 250.0
offset_bottom = 375.0
theme_override_styles/panel = SubResource("StyleBoxFlat_xmoxq")
script = ExtResource("1_jpp8f")

[node name="CardName" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Card Name"

[node name="CardCost" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 23.0
grow_horizontal = 0
text = "3"
horizontal_alignment = 2

[node name="CardArt" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.0
offset_top = -157.5
offset_right = 105.0
offset_bottom = 2.5
grow_horizontal = 2
grow_vertical = 2
expand_mode = 2

[node name="CardText" type="Label" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -151.0
offset_right = -20.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 0
text = "xxxxxxx
xxxxxxxxxxxxxxx
xxxxxxxxxxxxxxx
xxxxxxxxxxxxxxx"
vertical_alignment = 1
autowrap_mode = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
